--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
             <i class="fa fa-times" aria-hidden="true"></i>
           </div>
         </section>
+
+        <section class="logo"><p class ="section-heading">Logo</p>
+          <img src="./img/logo.svg" alt="">
+        </section>
+
       </div>
       <!-- end .column -->
 
